# harmonicon

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  ROADMAP.md  TODO.md  build.rs  qml.qrc  win_installer.bat
.github/workflows/: flatpak.yaml  macos.yaml  release.yaml  windows-installer.yaml
Qml/: BluesHarmonica.qml  Metronome.qml
assets/: credits.md  lesson_schema.dtd.json  song_schema.dtd.json
assets/locales/en-US/: main.ftl.ron
assets/locales/es-ES/: main.ftl.ron
assets/locales/pt-BR/: main.ftl.ron
assets/midi/: AUD_DD1000.mid  AUD_HTX1667.mid
assets/notes/: circular.json  circular.png~  square.json  square.png~
assets/notes/2d/: circular.json
assets/notes/3d/: square.json
assets/shaders/: editor_note.wgsl  note_shape.wgsl  note_tail_2d.wgsl  note_tail_3d.wgsl  oscilloscope.wgsl  vibrato.wgsl
assets/themes/: theme_schema.dtd.json
assets/themes/BluesNoir/: theme.json
assets/themes/default/: theme.json
docs/: gameplay_validation.md  lessons_plan.md  physical_design_plan.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  bending-trainer.md  calibration.md  controls.md  getting-started.md  help-about.md  introduction.md  jam-generate.md  jam-session.md  lessons.md  main-menu.md  options.md  play-2d.md  play-3d.md  play-menu.md  playing-a-song.md  song-editor.md  themes.md  troubleshooting.md  tutorial.md
packaging/flatpak/: README.md  cargo-sources.json  harmonicon.sh  io.github.tcanabrava.Harmonicon.desktop  io.github.tcanabrava.Harmonicon.metainfo.xml  io.github.tcanabrava.Harmonicon.yaml  io.github.tcanabrava.harmonicon.desktop  io.github.tcanabrava.harmonicon.metainfo.xml  io.github.tcanabrava.harmonicon.yaml
packaging/windows/: README.md  harmonicon.iss  setup.iss
scripts/: blues_harp_rounded_numbered.glb  create_base_harp_model.py  generate_lesson_files.py  generic_blues_harp.glb  make_note_cube.py  pyproject.toml
src/: CMakeLists.txt  app.rs  audio_input.rs  jam_backing.rs  lessons.rs  lib.rs  localization.rs  main.cpp  main.rs  note_bench.rs  pitch_detect.rs  profile.rs  scoring.rs  settings.rs  theme.rs
src/Metronome/: CMakeLists.txt  Metronome.cpp  Metronome.h
src/Metronome/Unittest/: CMakeLists.txt  test_metronome.cpp
src/assets_management/: mod.rs  watch.rs
src/audio_system/: audio_input.rs  midi.rs  midi_functions.rs  mod.rs  pipeline.rs  pitch_detect.rs  synth.rs  wav.rs  waveform.rs
src/audio_system/pitch_detect/: tests.rs
src/dialogs/: algo_picker.rs  button.rs  button_material.rs  combobox.rs  confirm_dialog.rs  file_dialog.rs  font_fallback.rs  mod.rs  scroll_area.rs  tab_bar.rs  tooltip.rs  ui_scale.rs
src/gameplay/: adaptive_difficulty.rs  bars.rs  bending_trainer.rs  call_response.rs  clock.rs  countdown_overlay.rs  gameplay_2d.rs  gameplay_3d.rs  harmonica_overlay.rs  hud.rs  jam_session.rs  judge.rs  lifecycle.rs  metronome_overlay.rs  mod.rs  modifier_legend.rs  note_shape_material.rs  note_tail_2d.rs  note_tail_3d.rs  note_visual_2d.rs  notes.rs  pause_menu.rs  phrase_overlay.rs  plugin.rs  results.rs  scoring.rs  song_progress_overlay.rs  state.rs  tests.rs  twelve_bar_blues_overlay.rs  vibrato_material.rs  wait_freeze_overlay.rs
src/gameplay/bending_trainer/: tests.rs
src/gameplay/gameplay_3d/: tests.rs
src/gameplay/jam_session/: tests.rs
src/harmonica/: mod.rs
src/jam/: backing.rs  call_response.rs  improv.rs  mod.rs  session.rs
src/jam/call_response/: tests.rs
src/jam/improv/: tests.rs
src/jam/session/: tests.rs
src/lessons/: catalog.rs  manifest.rs  mod.rs  progress.rs
src/menu/: button_material.rs  calibration.rs  credits.rs  jam_generate.rs  lessons.rs  mod.rs  options.rs  routing.rs  scene.rs  song_editor.rs  song_editor_2.rs  theme_picker.rs  tutorial.rs
src/menu/pages/: artist_list.rs  calibration.rs  credits.rs  help_about.rs  jam_generate.rs  jam_session.rs  lessons.rs  main.rs  mod.rs  mode_select.rs  options.rs  play.rs  song_list.rs  theme_picker.rs  tutorial.rs
src/menu/song_editor/: grid.rs  harpchart.rs  interaction.rs  material.rs  mod.rs  panel.rs  playback.rs  ui.rs  (+2 more)
src/scoring/: tests.rs
src/song/: chart.rs  harmonica.rs  loader.rs  midi.rs  mod.rs  note_parser.rs
src/song_editor/: clipboard.rs  debug_record.rs  expected_notes.rs  grid.rs  harpchart.rs  interaction.rs  lesson_form.rs  material.rs  meta_form.rs  midi_import.rs  midi_parse.rs  mod.rs  mod_panel.rs  panel.rs  panel_widgets.rs  pitch_map.rs  playback.rs  practice.rs  ranges.rs  record.rs  scroll.rs  state.rs  tests.rs  timeline.rs  timeline_overlay.rs  transport.rs  ui.rs  waveform.rs
src/spectrogram/: bars.rs  mod.rs  oscilloscope.rs
tests/: asset_layout.rs  physical_design.rs
(+83 files in other folders)
