[package]
name = "harmonicon"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bevy = { version = "0.19.0-rc.3" }
cpal = "0.15"
rustfft = "6.4"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.28"
thiserror = "2"
midly = "0.5"
figment = { version = "0.10", features = ["json"] }
dirs = "5"
# Window icon: winit must match Bevy's version; image decodes the PNG.
winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies.bevy-inspector-egui]
version = "0.36"
optional = true

[features]
inspector = ["bevy-inspector-egui"]

[[bin]]
name = "hole-editor"
path = "src/bin/hole_editor.rs"

[[bin]]
name = "midi-to-chart"
path = "src/bin/midi_to_chart.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
