[package]
name = "harmonicon"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# `wav` lets bevy_audio decode the in-memory WAV the song editor synthesises for
# its Play button (and user-supplied .wav background tracks).
bevy = { version = "0.19.0", features = ["wav"] }
cpal = "0.15"
rustfft = "6.4"
crossbeam-channel = "0.5"
# Audio decode for Song Editor tempo analysis (ogg via lewton; matches the
# version bevy_audio already pulls in, so no duplicate rodio).
rodio = { version = "0.22", default-features = false, features = ["vorbis"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.28"
thiserror = "2"
midly = "0.5"
figment = { version = "0.10", features = ["json"] }
dirs = "5"
pulldown-cmark = { version = "0.12", default-features = false }
# Window icon: winit must match Bevy's version; image decodes the PNG.
winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }
bevy_fluent = "0.15.0"
# The `Content` trait used to resolve Fluent message keys; bevy_fluent builds on
# this same version but does not re-export the trait.
fluent_content = "0.0.5"
unic-langid = "0.9"
# Detect the OS UI language so the game starts in the player's locale.
sys-locale = "0.3"
regex = "1.13.1"
rand = "0.10"
clap = { version = "4.6.2", features = ["derive"] }
# Watches ~/Harmonicon (songs/, themes/) so drop-in content is picked up
# live instead of needing a manual refresh or restart. crossbeam-channel
# feature: bridges the watcher's background thread into ECS the same way
# audio_input.rs already bridges the mic capture thread.
notify-debouncer-full = { version = "0.7", features = ["crossbeam-channel"] }

[features]
# Fast local iteration: dynamic-links Bevy and enables its dev tools + asset
# file watcher. Never ship this — dynamic_linking needs libbevy_dylib*.so
# alongside the binary, which packaged builds (e.g. the flatpak) don't bundle.
# Local dev: `cargo run --features dev`.
dev = [
    "bevy/dev",
    "bevy/dynamic_linking",
    "bevy/debug"
]

[[bin]]
name = "hole-editor"
path = "src/bin/hole_editor.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
